--- a/style.css
+++ b/style.css
@@ -216,3 +216,13 @@ svg{
     font-size: 38px;
     line-height: 43.9px;
 }
+.sec4 #graphSec{
+    margin: 100px 0;
+}
+#graphSec{
+    width: 100%;
+    height: auto;
+    border-bottom: rgb(50, 52, 56) solid 1px;
+
+}
+
