--- a/style.css
+++ b/style.css
@@ -138,7 +138,8 @@ svg{
     margin: 20px 0;
 }
 #separator{
-    height: 160px;
+    height: auto;
+    min-height: 160px;
 }
 #separator div{
     border: #484E53 solid 1px;
@@ -157,7 +158,7 @@ svg{
     text-wrap: wrap;
 }
 .sec3{
-    padding: 70px 50px;
+    padding: 50px 50px;
     height: auto;
     border-bottom: rgb(50, 52, 56) solid 1px;
 
