--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 body{
     min-height: 100vh;
 }
+ul{
+    list-style-type: none;
+}
 .main{
     width: 100%;
     overflow-x: hidden;
@@ -200,7 +203,7 @@ svg{
     border-radius: 30px;
 }
 .sec4{
-    padding: 50px 10px;
+    padding: 50px 10px 0 10px;
     height: auto;
 }
 .sec4 #textSec .title{
@@ -218,7 +221,7 @@ svg{
     line-height: 43.9px;
 }
 .sec4 #graphSec{
-    margin: 100px 0;
+    margin: 100px 0 10px 0;
 }
 #graphSec{
     width: 100%;
@@ -226,4 +229,32 @@ svg{
     border-bottom: rgb(50, 52, 56) solid 1px;
 
 }
+.sec5{
+    height: auto;
+    border-bottom: rgb(50, 52, 56) solid 1px;
+    
+}
+.sec5 #sec51{
+    margin:0 0 5px 10%;
+}
+.sec5 #sec51 p:first-child{
+    font-family: "Urbanist",sans-serif;
+    font-weight: 400;
+    color: #a9a9a9;
+    font-size: 16px;
+    line-height: 24.64px;
+}
+.sec5 #sec51 p:last-child{
+    font-family: "Urbanist",sans-serif;
+    font: 500;
+    font-size:38px;
+    line-height: 43.9px;
+    color: #DEDEDE;
 
+}
+
+
+.sec5 #sec52 ul > li:before {
+    content: "-";
+    text-indent: -7px;
+  }
