--- a/style.css
+++ b/style.css
@@ -253,8 +253,34 @@ svg{
 
 }
 
-
+.sec5 #sec52{
+    width: 90%;
+    height: auto;
+    margin: auto;
+}
+.sec5 #sec52 p:first-child{
+    font-family: "Urbanist",sans-serif;
+    font-size:38px;
+    font-weight: 500;
+    color: #dedede;
+    line-height: 43.9px;
+    width: 60%;
+    min-width: 320px;
+}
+.sec5 #sec52 p:last-child{
+    font-family: "Urbanist",sans-serif;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 14.4px;
+    color: #A9A9A9;
+}
+.sec5 #sec52 ul li{
+    font-family: "Urbanist",sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    color: #A9A9A9;
+}
 .sec5 #sec52 ul > li:before {
-    content: "-";
-    text-indent: -7px;
+    content: "- ";
   }
