margin edit in sec5

--- a/style.css
+++ b/style.css
@@ -271,15 +271,13 @@ svg{
     font-family: "Urbanist",sans-serif;
     font-weight: 600;
     font-size: 12px;
-    line-height: 14.4px;
     color: #A9A9A9;
 }
 .sec5 #sec52 ul li{
     font-family: "Urbanist",sans-serif;
     font-weight: 600;
     font-size: 20px;
-    line-height: 24px;
-    color: #A9A9A9;
+    color: #dedede;
 }
 .sec5 #sec52 ul > li:before {
     content: "- ";
