--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap');
 :root{
     --secColor:#d46868;
 }
@@ -280,6 +281,7 @@ svg{
     font-weight: 600;
     font-size: 20px;
     color: #dedede;
+    line-height: 5px;
 }
 .sec5 #sec52 ul > li:before {
     content: "- ";
@@ -289,7 +291,4 @@ svg{
     justify-content: center;
     gap: 50px;
     margin: 30px 0;
-}
-#arrows i{
-    fill:#A9A9A9;
 }
