--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ svg{
     margin-top: 50px;
 }
 #sec53 #sec531 p:first-child{
-    font-family: "Abhaya Libre", serif;
+    font-family: "Abhaya Libre ExtraBold", serif;
     font-weight:800;
     font-size: 48px;
     line-height: 50.88px;
@@ -330,6 +330,27 @@ svg{
     color: #a9a9a9;
     text-align: start;
 
-
-
+}
+#sec53 #sec532{
+    height: auto;
+    margin-top: 100px;   
+}
+#sec53 #sec532 div{
+    margin: 5px;
+    text-align: start;
+}
+#sec53 #sec532 div p:first-child{
+    font-family: "Abhaya Libre ExtraBold",serif;
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 50.88px;
+    color: #ffffff;
+}
+#sec53 #sec532 div p:last-child{
+    font-family: "Urbanist",sans-serif;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 26.5px;
+    color: #ffffff;
+  
 }
