--- a/style.css
+++ b/style.css
@@ -365,6 +365,7 @@ svg{
     flex-direction: column;
     align-items: center;
     margin: 40px 0;
+    height: auto;
 }
 #sec6 #sec61 p:first-child{
     font-family: "Urbanist",sans-serif;
@@ -383,6 +384,7 @@ svg{
 }
 #sec6 #sec62{
     display: flex;
-    gap: 50px;
+    height: auto;
+    gap: 20px;
     margin: 50px 0;
 }
