--- a/style.css
+++ b/style.css
@@ -390,8 +390,14 @@ svg{
     max-width: 1200px;
     margin: 50px 0;
 }
-#sec6 #sec62 div img{
+#sec6 #sec62 #sec621{
+    display: flex;
+    align-items:start;
+    flex-direction: column;
+}
+#sec6 #sec62 #sec621 img{
     max-width: 540px;
+    
 }
 #sec6 #sec62 #new{
     font-family:"Urbanist",sans-serif;
