--- a/style.css
+++ b/style.css
@@ -296,9 +296,11 @@ svg{
     margin: 30px 0;
 }
 #sec53{
-    width: 80%;
+    max-width: 1900px;
+    display: flex;
+    justify-content: space-between;
+    gap: 180px;
     margin: auto;
-    margin-top: 60px;
     padding-bottom: 80px;   
 }
 #sec53 #sec531 p:first-child{
@@ -339,6 +341,7 @@ svg{
 #sec53 #sec532{
     height: auto;
     margin-top: 100px;
+    margin: auto;
 }
 #sec53 #sec532 div{
     margin: 5px;
