--- a/style.css
+++ b/style.css
@@ -424,6 +424,19 @@ svg{
     margin-top: 30px;
 }
 footer{
-    height: auto;
+    min-height:200px;
+}
+#icons{
+    margin: 40px ;
     display: flex;
+    justify-content: end;
+}
+#icons a{
+    width: 32px;
+    height: 32px;
+    border: 2px #484E53 solid;
+    border-radius:30px;
+    padding: 10px;
+    margin: 0 10px;
+    text-align: center;
 }
