--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ svg{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 40px 0;
+    margin: 40px 0 0 0;
     height: auto;
     border-bottom: rgb(50, 52, 56) solid 1px;
 }
