--- a/style.css
+++ b/style.css
@@ -296,12 +296,7 @@ svg{
     margin: 30px 0;
 }
 #sec53{
-    max-width: 1900px;
-    display: flex;
-    justify-content: space-between;
-    gap: 180px;
-    margin: auto;
-    padding-bottom: 80px;   
+   margin-bottom: 80px;
 }
 #sec53 #sec531 p:first-child{
     font-family: "Abhaya Libre", serif;
@@ -341,7 +336,6 @@ svg{
 #sec53 #sec532{
     height: auto;
     margin-top: 100px;
-    margin: auto;
 }
 #sec53 #sec532 div{
     margin: 5px;
