--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ svg{
     border-bottom: rgb(50, 52, 56) solid 1px;
     display: flex;
     flex-direction: column;
+    padding-bottom: 100px;
     
 }
 .sec5 #sec51{
@@ -296,7 +297,11 @@ svg{
     margin: 30px 0;
 }
 #sec53{
-   margin-bottom: 80px;
+   display: flex;
+   width: 90%;
+   margin: auto;
+   justify-content: space-between;
+   
 }
 #sec53 #sec531 p:first-child{
     font-family: "Abhaya Libre", serif;
